traces/bug_48.txt
src/libMesh/eigenv.c:39: error: DEAD_STORE
  The value written to &n (type int) is never used.
Showing all 1 steps of the trace


src/libMesh/eigenv.c:39:3: Write of unused value
37.     c = p[1];
38.     d = p[0];
39.     n = 1;
        ^
40.   
41.     /* 1st derivative of f */
